# CatCord

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  __main__.py  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: actionembed.yml  deploy-backend.yml  deploy-frontend.yml  lint-test-backend.yml  lint-test-frontend.yml
backend/: .gitignore  Dockerfile  init.sql  pyproject.toml  tox.ini
backend/src/: main.py
backend/src/core/: config.py  schemas.py  utils.py
backend/src/database/: database.py  models.py
backend/src/database/crud/: users.py
backend/src/endpoints/: messages.py  servers.py  users.py
docs/: .gitignore  README.md  docusaurus.config.js  package.json  sidebars.js
docs/docs/: backend.md  frontend.md  intro.md
docs/docs/api/: change-log.md  intro.md
docs/docs/api/structures/: messages.md  servers.md  users.md
docs/docs/see-also/: contributing.md  privacy.md  terms.md
docs/src/css/: custom.css
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  package.json  svelte.config.js  tsconfig.json
frontend/src/: config.ts  index.html
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/components/: darkmode.svelte  navbar.svelte
frontend/src/lib/requests/: users.ts
frontend/src/lib/requests/utils/: logger.ts  request.ts
frontend/src/lib/utils/: logger.ts  now.ts
frontend/src/pages/: __error.svelte  __layout.svelte  index.svelte
frontend/src/scss/: globals.scss  reset.scss  themes.scss
