[tool.poetry]
name = "catcord"
version = "0.1.0"
description = ""
authors = ["Cat Developer Group"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
gunicorn = "^22.0.0"
starlette = "^0.37.2"
aiofiles = "^23.2.1"
taskipy = "^1.12.2"
loguru = "^0.7.2"
SQLAlchemy = "^2.0.29"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
ruff = "^0.4.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
